--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,5 +75,8 @@
     <string name="carbohydrates">Carbohydrates</string>
     <string name="protein">Protein</string>
     <string name="calories">Calories</string>
+    <string name="menu_dashboard">Dashboard</string>
+    <string name="menu_result_scan">Result Scan</string>
+    <string name="menu_camera">Camera</string>
 
 </resources>
